--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="welcomeMsgStr">Welcome to The app</string>
+    <string name="usernameStr">Username</string>
+    <string name="Input_hint">Enter your name</string>
+    <string name="welcomepageBTN">Enter</string>
 </resources>
