--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="Input_hint">Enter your name</string>
     <string name="welcomepageBTN">Save</string>
     <string name="hint_name_edit">Enter your name</string>
+    <string name="eventTitleText">Title</string>
+    <string name="StartText">Starts</string>
+    <string name="EndsTesxt">Ends</string>
 </resources>
