--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="welcomeMsgStr">Welcome to The app</string>
-    <string name="usernameStr">Username</string>
+    <string name="usernameStr">. . .</string>
     <string name="Input_hint">Enter your name</string>
     <string name="welcomepageBTN">Save</string>
     <string name="hint_name_edit">Enter your name</string>
