added Create_Category activity and finished color Picker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="EndsTesxt">Ends</string>
     <string name="to_do_list">To Do List</string>
     <string name="button">Button</string>
+    <string name="Category_ColorText">Color</string>
 </resources>
